--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,7 +12,10 @@ spring:
     url: jdbc:mysql://localhost:3306/board
     username: jhseo
     password: jhseo0402
-    driver-class-name:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#     url: jdbc:h2:mem:testdb
+#     username: sa
+#     driver-class-name: org.h2.Driver
   jpa:
     defer-datasource-initialization: true
     hibernate.ddl-auto: create
