#35 - spring security test 디펜던시 추가
인증 관련 테스트에 필요한데, spring initializer에서 누락된 듯 하다. 추가

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	// 사용자 custom properties도 문서 세팅이 가능해지고, IDE 지원 받게 됨
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 
 	// queryDSL 설정
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
